--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
+
+.sign-up-container {
+  align-items: center;
+  display: block;
+  margin-left: 30%;
+  top: 200px;
+  width: 40%;
+}
