authentication set-up: sign-in message

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,3 +7,11 @@
   top: 200px;
   width: 40%;
 }
+
+.sign-in-container {
+  align-items: center;
+  display: block;
+  margin-left: 30%;
+  top: 200px;
+  width: 40%;
+}
