--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,13 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
 
-.sign-up-container,
-.sign-in-container,
-.change-password-container,
-.sign-out-container {
-  align-items: center;
-  display: block;
-  margin-left: 30%;
-  padding-top: 25px;
-  top: 200px;
-  width: 40%;
-}
+// .sign-up-container,
+// .sign-in-container,
+// .change-password-container,
+// .sign-out-container {
+//   align-items: center;
+//   display: block;
+//   margin-left: 30%;
+//   padding-top: 25px;
+//   top: 200px;
+//   width: 40%;
+// }
