--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,19 @@
 @import '~bootstrap/scss/bootstrap';
 
-.sign-up-container,
-.sign-in-container,
-.change-password-container,
-.sign-out-container {
+.pre-login {
+  align-items: center;
+  display: block;
+  margin-left: 30%;
+  padding-top: 25px;
+  top: 200px;
+  width: 40%;
+}
+
+.dropdown {
+  align-items: top;
+}
+
+.crud-contacts {
   align-items: center;
   display: block;
   margin-left: 30%;
