upgarded CRUD-ui

--- a/assets/scripts/templates/contacts-listing.handlebars
+++ b/assets/scripts/templates/contacts-listing.handlebars
@@ -1,5 +1,5 @@
 {{#each contacts as |contact|}}
-<div id="handlebars-{{contacts.id}}" data-id="{{contact.id}}">
+<div id="handlebars-{{contacts.id}}" data-id="{{contact.id}}" class="contact-handlebar-item">
    <ul>
      <li>ID: {{contact.id}}</li>
      <li>Name: {{contact.name}}</li>
