--- a/assets/scripts/templates/contacts-listing.handlebars
+++ b/assets/scripts/templates/contacts-listing.handlebars
@@ -6,6 +6,7 @@
      <li>Email: {{contact.email}}</li>
      <li>Industry: {{contact.industry}}</li>
    </ul>
+   <div id="deleteable-{{contact.id}}-user-message"></div>
    <button type="button" name="button" class="delete-contact">Delete</button>
 
 </div>
