ui messages remediated

--- a/assets/scripts/templates/contacts-listing.handlebars
+++ b/assets/scripts/templates/contacts-listing.handlebars
@@ -7,6 +7,8 @@
      <li>Industry: {{contact.industry}}</li>
    </ul>
    <div id="deleteable-{{contact.id}}-user-message"></div>
+   <div id="update-{{contact.id}}-user-message"></div>
+
    <button type="button" name="button" class="delete-contact">Delete</button>
 
 </div>
